# HalluCiteChecker

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml
HalluCiteChecker/: __init__.py  citation_dataclass.py  timer.py  utils.py
HalluCiteChecker/CitationExtractor/: __init__.py  base.py  docling_extractor.py
HalluCiteChecker/CitationMatcher/: __init__.py  base.py  fuzz_matcher.py
HalluCiteChecker/CitationRecognizer/: __init__.py  base.py  delft_recognizer.py
HalluCiteChecker/CitationRecognizer/models/: resources-registry.json
HalluCiteChecker/cli/: main.py
