[project]
name = "hallucitechecker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "acl-anthology>=1.0.0",
    "datasets>=4.6.1",
    "delft",
    "docling>=2.75.0",
    "onnxruntime>=1.24.2",
    "openreview-py>=1.58.0",
    "pypdf>=6.7.4",
    "rapidfuzz>=3.14.3",
    "rapidocr-onnxruntime>=1.4.4",
    "rich>=14.3.3",
    "spacy>=3.8.11",
    "termcolor>=3.3.0",
]

[tool.uv.sources]
delft = { git = "https://github.com/kermitt2/delft.git", rev = "feature/onnx-export" }

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["HalluCiteChecker"]

[project.scripts]
hallucitechecker = "HalluCiteChecker.cli.main:main"